# sabotage-similarity

./: .env.example  .gitignore  README.md  RENDER_DEPLOY.md  docker-compose.yml  pyproject.toml
backend/: .dockerignore  Dockerfile  README.md  requirements.txt
backend/app/: config.py  dependencies.py  main.py  schemas.py
backend/app/routers/: search.py
backend/app/services/: similarity_service.py
data/: embeddings.pt  indice_letras.pt  letras_chunks.json  letras_raw.json
frontend/: .dockerignore  Dockerfile  README.md  docker-entrypoint.sh  index.html  nginx.conf  script.js  style.css
scraper/: README.md  scrapy.cfg
scraper/sabotage/: settings.py
scraper/sabotage/spiders/: sabotage_spider.py
scripts/: README.md  build_chunks.py  embeddings.py  search.py
