[project]
name = "av-2-pesquisa-por-similaridade-com-llm-v2-llm-sabotage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.135.2",
    "pydantic==2.12.5",
    "scrapy==2.14.2",
    "sentence-transformers==5.3.0",
    "torch==2.11.0",
    "uvicorn==0.42.0",
]
